# 6502

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  cmake_install.cmake  config.status  configure  configure.ac  libbase.h  libbase.h.in  nes.cfg  nes.cpp  options.json  prg.nes  prg.s  stamp-h1  ~?
NESPrograms/: ..s  a.s  hello.c  hello.s  nes.cfg  prg  prg.s
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
include/: Emulator.hpp  cpu.hpp  defs.hpp  instructions.hpp  libbase.h  memory.hpp
src/: Makefile  Makefile.am  Makefile.in  libbase.cpp  libbase.h  nes.cpp
src/.deps/: nes-nes.Tpo  nes.Tpo
